--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.14.2",
     "mongoose": "^6.5.4",
     "nodemon": "^2.0.19",
+    "swagger-ui-express": "^4.5.0",
     "uuid": "^8.3.2"
   }
 }
